JM 9/11/2004
- removed Protocols, added peersim.config.FastConfig instead. The new feature
  is that FastConfig is automatic, it reads and stores "linkable" config lines
  in a transparent fashion to the protocols.

JM 9/11/2004
- added nextLong(long) to CommonRandom

AM 6/11/2004
- added event-based simulator in package peersim.edsim
- added transport protocols in package peersim.transport
- added class peersim.Simulator to serve as the new entry point to peersim.
  It looks at the configuration and launches the right simulator. Check
  the classdocs of peersim.Simulator.
  
MJ 3/11/2004:
VERSION 0.2 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

GJ 3/11/2004
- Added MedianStats class. It extracts the median value from a data collection;
  it subclasses the IncrementalStats class.

MJ 2/11/2004
- changed config parameter name "protocolID" to "protocol" in package
  distributions. Protocol id is an internal concept now, transparent to the
  user and protocol name should be used (which can also be a number of course).

MJ 29/10/2004
- new constructor parameter for OverlayGraph so that setEdge could work in
  an undirected manner (sets opposite edge too). OverlayGraph is interpreted as
  directed, nontheless, because setEdge is not the only way to set edges.
- wireRegularRandom has new config parameter "undirected", which uses the
  feature above 
- new toString to IdleProtocol, 

MJ 25/10/2004
- added method lookupPid to Configuration to make it possible to search
  for a protocol id based on the protocol name

MJ 22/10/2004
- added the possibility of excluding entities that are present in the config
  using a simple config parameter: eg "include observer aa bb 23". This
  works exactly like the order feature only those names that are not listed
  are excluded. [see classdoc of Configuration]
- some more minor refactoring of Simulator and OrderSimulator

MJ 21/10/2004